# tiny-aya

./: Cargo.toml  README.md
aya/: Cargo.toml
aya-log/: Cargo.toml
aya-log/src/: lib.rs
aya/src/: bpf.rs  util.rs
aya/src/maps/: mod.rs
aya/src/maps/hash_map/: hash_map.rs  per_cpu_hash_map.rs
aya/src/maps/perf/: perf_buffer.rs
aya/src/sys/: bpf.rs  mod.rs  perf_event.rs
