[workspace]
members = [
    "aya-log",
    "aya"
]

resolver = "2"


[workspace.dependencies]
thiserror = { version = "1", default-features = false }
lazy_static = { version = "1", default-features = false }
bitflags = { version = "2.2.1", default-features = false }
object = { version = "0.36", default-features = false }
bytes = { version = "1", default-features = false }
assert_matches = { version = "1.5.0", default-features = false }
log = { version = "0.4", default-features = false }
libc = { version = "0.2.105", default-features = false }
async-io = { version = "2.0", default-features = false }
tokio = { version = "1.24.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
testing_logger = { version = "0.1.1", default-features = false }
aya-log-common = { git = "https://github.com/aya-rs/aya", rev = "3d57d35", default-features = false }
aya-obj = { git = "https://github.com/aya-rs/aya", rev = "3d57d35", features = ["std"] }