[package]
name = "aya"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
aya-obj = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
lazy_static = { version = "1", default-features = false }
object = { workspace = true, features = ["elf", "read_core", "std", "write"] }
bytes = { workspace = true }
assert_matches = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }
async-io = { workspace = true, optional = true }
libc = { workspace = true }
[features]
default = ["async_tokio"]
async_tokio = ["tokio/net"]
async_std = ["dep:async-io"]